<resources>
    <string name="app_name">AroundMe</string>

    <string name="searchButton">Around Me</string>
    <string name="optionsButton">Options</string>
    <string name="distanceText">Atstumas</string>
    <string name="title_activity_maps">Map</string>
    <string name="seekBarMaxString">10</string>
    <string name="seekBarMinString">0.1</string>

    <string name="AddButton">Add</string>
    <string name="RemoveButton">Remove</string>

    <string name="send_request">Search</string>

    <string name="filters">Event Search</string>
    <string name="ImageDescription">description</string>
    <string name="ImageTitle_Event">title</string>
    <string name="ImageDescription_Event">description</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_List">Event List</string>
    <string name="title_Map">Search</string>
    <string name="title_notifications">Notifications</string>

    <string name="no_sensor">NO SENSOR</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>


    <string-array name="categories_array">
        <item>conferences</item>
        <item>expos</item>
        <item>concerts</item>
        <item>festivals</item>
        <item>performing-arts</item>
        <item>community</item>
        <item>sports</item>
        <item>All</item>
    </string-array>

</resources>
