<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/distanceText"
        android:textAlignment="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <SeekBar
            android:id="@+id/seekBar2"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="421dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@+id/textSeekMax"
            android:background="@color/colorPrimary"
            android:max="100"
            android:maxHeight="2dip"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <TextView
            android:id="@+id/textSeekMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimary"
            android:text="@string/seekBarMaxString" />

        <TextView
            android:id="@+id/textSeekMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/seekBarMinString" />

    </RelativeLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="218dp" />

    <Button
        android:id="@+id/addButton"
        style="@style/AppTheme"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonstyle"
        android:gravity="center"
        android:text="@string/AddButton"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/removeButton"
        style="@style/AppTheme"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonstyle"
        android:gravity="center"
        android:text="@string/RemoveButton"
        android:textAlignment="center"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listViewdepreceded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccentDark"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

        </ListView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>