<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundTransparent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="74dp"
        android:background="@color/colorBackgroundTransparent"
        android:contentDescription="@string/ImageDescription"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@color/colorBackgroundTransparent"
        android:text="@string/ImageTitle_Event" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/colorBackgroundTransparent"
        android:text="@string/ImageDescription_Event" />

    <Button
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonstyle"
        android:gravity="center"
        android:text="Share Button" />

    <Button
        android:id="@+id/sortButton"
        style="@style/AppTheme"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonstyle"
        android:gravity="center"
        android:text="Sort List"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorBackgroundTransparent"
        android:text="Transfered List"
        android:textAlignment="center"
        android:textSize="30sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listViewdepreceded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundTransparent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-16dp">

        </ListView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>